tests/errors/syn_while8.java
public class syn_while8 {
public static void main(String[] args){
while ( true || false ) 
}
}
}